<resources>
    <string name="app_name">StreamApp</string>
    <string name="email_address">email address</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="playlists">Playlists</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="lockpicture">LockPicture</string>
    <string name="userpicture">UserPicture</string>
    <string name="home_screen">Home Screen</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="choose_category">choose category</string>
    <string name="category_name">category name</string>
    <string name="add_category">add category</string>
    <string name="enter_new_category">enter new category</string>
    <string name="enter_category_to_delete">enter category to delete</string>
    <string name="delete">delete</string>
    <string name="username">username</string>
    <string name="categories">Categories</string>
    <string name="app_logo">App logo</string>
    <string name="string_app_logo" />
    <string name="real_name">real name</string>
    <string name="category">category</string>
    <string name="videos">Videos</string>
    <string name="video">video</string>
    <string name="play">Play</string>
    <string name="profile">Profile</string>

    <!-- For sharedPreferences -->
    <string name="userdata">UserData</string>
    <string name="ud_isUserLoggedIn">isUserLoggedIn</string>
    <string name="ud_authentication">authentication</string>
    <string name="ud_username">username</string>
    <string name="ud_realname">realname</string>
    <string name="ud_email">email</string>
    <string name="ud_typeid">typeId</string>
    <string name="ud_type">type</string>
    <string name="pip_mode">pip mode</string>
    <string name="trends">Trends:</string>
    <string name="comments">comments</string>
    <string name="description">description</string>
    <string name="title">Title:</string>
    <string name="add">add</string>
    <string name="comments2">Comments:</string>
    <string name="ud_userid">userId</string>
    <string name="vu_chooseVideo">Wähle ein Video</string>
    <string name="vu_button_select">Wähle Video</string>
    <string name="vu_MIME">video/*</string>
    <string name="vu_title">Titel</string>
    <string name="vu_description">Beschreibung</string>
    <string name="vu_upload">Hochladen</string>
    <string name="vu_choose_file">Wähle Video</string>
    <string name="vu_tv_filename_default">-- Keine Datei ausgewählt --</string>
    <string name="vu_et_description_hint">Trage hier eine sinnvolle Beschreibung ein</string>
    <string name="top_trending_videos">Top Trending Videos:</string>
    <string name="write_a_comment">write a comment:</string>
    <string name="video_description">video description:</string>
    <string name="comments3">comments:</string>
    <string name="add_rating">add rating</string>
    <string name="_5">/5</string>
    <string name="views">Views:</string>
    <string name="upload_date">Upload date:</string>
    <string name="uploaded_by">uploaded by:</string>
    <string name="author">author:</string>
    <string name="show_videos_of_playlist">showVid</string>
    <string name="show_vids_of_playlist">show Vids of playlist</string>
    <string name="hochladen">Hochladen</string>
    <string name="logout">Logout</string>
    <string name="enter_new_playlist">enter new playlist</string>
    <string name="meine_videos">meine Videos</string>
    <string name="swipe_right_to_add_video_to_playlist">swipe right to add video to playlist</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>